form is mving from one stage to another

--- a/index.html
+++ b/index.html
@@ -9,20 +9,54 @@
     <script defer src="scripts.js"></script>
   </head>
   <body>
-    <form data-multi-step>
+    <form
+      data-multi-step
+      autocomplete="off"
+      autocomplete="new-password"
+      autofill="off"
+      autocomplete="false"
+    >
       <div data-step="1" class="card">
         <div class="form-group">
+          <h3 class="step-title">This is step 1</h3>
           <label for="email">Email</label>
-          <input type="text" id="email" />
+          <input type="email" id="email" name="email" required />
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="text" id="password" />
+          <input type="password" id="password" name="password" required />
         </div>
-        <button type="button">Next</button>
+        <button type="button" data-next>Next</button>
       </div>
-      <div data-step="2" class="card"></div>
+      <div data-step="2" class="card">
+        <div class="form-group">
+          <h3 class="step-title">This is step 2</h3>
+          <label for="address">Address</label>
+          <input type="text" id="address" />
+        </div>
+        <div class="form-group">
+          <label for="city">City</label>
+          <input type="text" id="city" />
+        </div>
+        <div class="form-group">
+          <label for="zip-code">Zip code</label>
+          <input type="text" id="zip-code" required />
+        </div>
+        <button type="button" data-previous>Previous</button>
+        <button type="button" data-next>Next</button>
+      </div>
       <div data-step="3" class="card">
+        <h3 class="step-title">This is step 3</h3>
+        <div class="form-group">
+          <label for="first-name">First name</label>
+          <input type="text" id="first-name" />
+        </div>
+        <div class="form-group">
+          <label for="last-name">Last Name</label>
+          <input type="text" id="last-name" />
+        </div>
+
+        <button type="button" data-previous>Previous</button>
         <button type="submit">Submit</button>
       </div>
     </form>
